Feature: Email Enhancements Added email-with-table.html Thymeleaf template for structured email notifications containing HTML tables, used by EmailComposer.buildEmailWithTable(). Added EmailComposerTest to verify template rendering produces well-formed HTML output. Added LpoTemplateTest to verify the LPO Thymeleaf template renders correctly with sample data. Added docs/superpowers/plans/2026-03-24-event-listener-to-explicit-service-calls.md — migration plan for replacing Spring @EventListener/@PostPersist side-effect listeners with explicit notifier service calls.